# magellan-core

./: .gitignore  README.md  test_bauds.sh  upload_workspace_to_jetson.sh
avr/: MagellanAvr.atsln  README.md
experimental/pcl_point_cloud_experiments/: CMakeLists.txt  preprocessor.cpp
experimental/pcl_point_cloud_experiments/color/: PreprocessData.ipynb  VisualizeData.ipynb
workspace/src/arduino_sensor_reader/: CMakeLists.txt  package.xml
workspace/src/arduino_sensor_reader/src/: arduino_sensor_reader.cpp
workspace/src/cone_detector/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
workspace/src/cone_detector/scripts/: .cone_detector.py.swp  cone_detector.py  detector.py  detector_test_console.py  detector_utils.py  ros_node.py
workspace/src/drive_from_file/: CMakeLists.txt  package.xml
workspace/src/drive_from_file/scripts/: node.py
workspace/src/drive_from_file/scripts/drive_files/: fast_forward_five_seconds.drive  forward_five_seconds.drive  forward_seven_seconds.drive  forward_thirty_seconds.drive  forward_three_seconds.drive  left_turn.drive  square.drive  stand_still_five_minutes.drive  turn_in_place.drive  zigzag.drive
workspace/src/lidar_sensor_reader/: CMakeLists.txt  package.xml
workspace/src/lidar_sensor_reader/src/: lidar_sensor_reader.cpp
workspace/src/localization/: CMakeLists.txt  package.xml
workspace/src/localization/include/: definitions.hpp
workspace/src/localization/include/contracts/: drive_input_manager_control_point.hpp  global_pose.hpp
workspace/src/localization/include/filters/: filter.hpp  linear_kalman_filter.hpp
workspace/src/localization/include/input_managers/: drive_input_manager.hpp  gps_input_manager.hpp  imu_input_manager.hpp
workspace/src/localization/include/localization/: constants.hpp  global_state.hpp
workspace/src/localization/include/localization/contracts/: drive_input_manager_control_point.hpp  global_pose.hpp  global_state.hpp
workspace/src/localization/src/: node.cpp  run_filter.cpp
workspace/src/localization/src/contracts/: drive_input_manager_control_point.cpp  global_pose.cpp  global_state.cpp
workspace/src/localization/src/filters/: linear_kalman_filter.cpp
workspace/src/localization/src/input_managers/: drive_input_manager.cpp  gps_input_manager.cpp  imu_input_manager.cpp
workspace/src/magellan_drive_hardware/: CMakeLists.txt  package.xml
workspace/src/magellan_drive_hardware/src/: magellan_drive_hardware_node.cpp
workspace/src/magellan_messages/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
workspace/src/magellan_messages/msg/: MsgConeDetectorOutput.msg  MsgLocalObstacleField.msg  MsgMagellanLocalization.msg  MsgMagellanObstacle.msg  MsgMagellanObstacleField.msg  MsgMagellanOccupancyGrid.msg  MsgMagellanPlannerDebug.msg  MsgObstacleDetectorConfig.msg  MsgVisualOdometryDebug.msg  MsgZedImagePose.msg  MsgZedPose.msg  MsgZedSensors.msg
workspace/src/magellan_messages/msg/cone_detector/: MsgConeDetectorDebug.msg
workspace/src/magellan_messages/msg/magellan_drive/: MsgMagellanDrive.msg
workspace/src/magellan_messages/msg/magellan_imu/: MsgMagellanImu.msg
workspace/src/magellan_messages/msg/visual_odometry/: MsgVisualOdometry.msg
workspace/src/magellan_rviz/: CMakeLists.txt  package.xml
workspace/src/magellan_rviz/src/: magellan_rviz_node.cpp
workspace/src/magellan_serial_port/: CMakeLists.txt  package.xml
workspace/src/magellan_serial_port/src/: magellan_serial_port.cpp
workspace/src/motor_ramp/: CMakeLists.txt  package.xml
workspace/src/motor_ramp/src/: motor_ramp_node.cpp
workspace/src/obstacle_detection/: CMakeLists.txt  package.xml
workspace/src/obstacle_detection/include/: ground_segmenter.hpp  ground_segmenter_factory.hpp  image_obstacle_detector.hpp  lidar_obstacle_detector.hpp  obstacle.hpp  obstacle_detector.hpp  obstacle_detector_types.hpp  obstacle_merger.hpp  planar_ransac_ground_segmenter.hpp
workspace/src/obstacle_detection/include/contracts/: detecting_sensor.hpp  image_obstacle.hpp  lidar_obstacle.hpp  obstacle.hpp  obstacle_type.hpp  perception_params.hpp
workspace/src/obstacle_detection/src/: debug_node.cpp  ground_segmenter_factory.cpp  image_obstacle_detector.cpp  lidar_obstacle_detector.cpp  node.cpp  obstacle_detector.cpp  obstacle_merger.cpp  planar_ransac_ground_segmenter.cpp  ros_node.cpp
workspace/src/obstacle_detection/src/contracts/: perception_params.cpp
workspace/src/planner/: CMakeLists.txt  package.xml
workspace/src/planner/include/: GlobalMap.hpp  a_star_path_generator.hpp  geometry_utils.hpp  global_map.hpp  goal_point_adjuster.hpp  last_seen_global_map.hpp  motor_signal_generator.hpp  path_follower.hpp  path_generator.hpp  path_validator.hpp  pid_motor_signal_generator.hpp  pid_path_follower.hpp  planner.hpp  planner_types.hpp  simple_goal_point_adjuster.hpp  simple_path_validator.hpp  voting_global_map.hpp
workspace/src/planner/src/: a_star_path_generator.cpp  geometry_utils.cpp  global_map.cpp  last_seen_global_map.cpp  pid_motor_signal_generator.cpp  pid_path_follower.cpp  planner.cpp  ros_node.cpp  simple_goal_point_adjuster.cpp  simple_path_validator.cpp  voting_global_map.cpp
workspace/src/rplidar_sensor_reader/: CMakeLists.txt  package.xml
workspace/src/rplidar_sensor_reader/src/: rplidar_sensor_reader.cpp
workspace/src/simulator_interface/: CMakeLists.txt  package.xml
workspace/src/simulator_interface/scripts/: interface.py
workspace/src/status_webpage/: CMakeLists.txt  package.xml
workspace/src/visual_odometry/: CMakeLists.txt  package.xml
workspace/src/visual_odometry/src/: visual_odometry.cpp
workspace/src/webcam_sensor_reader/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
workspace/src/webcam_sensor_reader/src/: .webcam_sensor_reader.cpp.swp  webcam_sensor_reader.cpp
workspace/src/xtion_reader/: CMakeLists.txt  package.xml
workspace/src/xtion_reader/src/: xtion_reader.cpp
workspace/src/zed_sensor_reader/: CMakeLists.txt  package.xml
workspace/src/zed_sensor_reader/src/: zed_sensor_reader.cpp  zed_to_pcd.cpp
(+170 files in other folders)
