<?xml version="1.0"?>
<package format="2">
  <name>magellan_drive_hardware</name>
  <version>0.0.0</version>
  <description>This node interfaces with all the hardware that drives the bot.</description>

  <maintainer email="mitchell.spryn@gmail.com">Mitchell Spryn</maintainer>
  <author email="mitchell.spryn@gmail.com">Mitchell Spryn</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>magellan_messages</build_depend>
  <build_depend>magellan_serial_port</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>magellan_messages</build_export_depend>
  <build_export_depend>magellan_serial_port</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>magellan_mesages</exec_depend>
  <exec_depend>magellan_serial_port</exec_depend>
</package>
